redirect to question pages and show questions

--- a/templates/question.html
+++ b/templates/question.html
@@ -6,12 +6,14 @@
   <form action="/answer" method="POST">
 
       <!-- you should have one item like this for every choice -->
+
       <p>
+        {% for choice in question.choices %}
         <input
             type="radio"
             name="answer"
-            value="value-goes-here">
-        choice-goes-here
+            value="{{ choice }}">
+        {% endfor %}
       </p>
 
     <button>Continue</button>
