question/answer complete

--- a/templates/completion.html
+++ b/templates/completion.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
-  <h1>Thanks for completing this survey!</h1>
+<h1>Thanks for completing this survey!</h1>
+
+<!-- <ul> -->
+{%for question in questions%}
+<p>{{question}}</p>
+<!-- <li><strong>{{question}}</strong>{{responses[{{loop.index}}]}}</li> -->
+{%endfor%}
+<!-- </ul> -->
 
 {% endblock %}
