--- a/templates/question.html
+++ b/templates/question.html
@@ -1,22 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>{{ question.prompt }}</h1>
+<h1>{{ question.prompt }}</h1>
 
-  <form action="/answer" method="POST">
+<form action="/answer" method="POST">
 
-      <!-- you should have one item like this for every choice -->
+  <!-- you should have one item like this for every choice -->
 
-      <p>
-        {% for choice in question.choices %}
-        <input
-            type="radio"
-            name="answer"
-            value="{{ choice }}">
-        {% endfor %}
-      </p>
+  <p>
+    {% for choice in question.choices %}
+    <input type="radio" name="answer" value="{{ choice }}">
+    <label for="{{ choice }}">{{ choice }}</label>
+    {% endfor %}
+  </p>
 
-    <button>Continue</button>
-  </form>
+  <button>Continue</button>
+</form>
 
 {% endblock %}
